--- a/mack.html
+++ b/mack.html
@@ -124,10 +124,10 @@
                         </div>
 
                         <div class="uk-container uk-container-small ">
-                            <div class="uk-padding">
+                            <div>
                                 <ul class="uk-list uk-margin-remove" uk-accordion>
 
-                                    <li class="uk-open uk-background-default uk-border-rounded-large uk-padding uk-margin-small">
+                                    <li class="uk-open uk-background-default uk-border-rounded-large uk-padding-small uk-margin-small">
                                         <a class="uk-accordion-title" href>
                                             <h3 class="uk-margin-remove fs-20 fw-600">Modern Redesign</h3>
                                         </a>
@@ -137,7 +137,7 @@
                                             <p>Presented below as an 'Old vs. New' comparison, this project serves as a case study demonstrating my evolution and growth as a designer and my deeper understanding of modern digital product design. This comparison directly illustrates how I now approach similar challenges with an expanded skillset in areas like design thinking and creating more delightful, functional design systems, my ability to apply modern design thinking to significantly improve a user experience, and my commitment to creating high-quality, user-centric digital products.</p></div>
                                     </li>
 
-                                    <li class="uk-background-default uk-border-rounded-large uk-padding uk-margin-small">
+                                    <li class="uk-background-default uk-border-rounded-large uk-padding-small uk-margin-small">
                                         <a class="uk-accordion-title" href>
                                             <h3 class="uk-margin-remove fs-20 fw-600">About the 2015 Original</h3>
                                         </a>
